--- a/config/istilah.tex
+++ b/config/istilah.tex
@@ -11,10 +11,8 @@
 
 % Italic Stuff
 \newcommand{\ir}[1]{\textit{Information Retrieval}}
-
 \newcommand{\reranker}[1]{\textit{re-ranker}}
 \newcommand{\Reranker}[1]{\textit{Re-ranker}}
-
 \newcommand{\sparse}[1]{\textit{sparse}}
 \newcommand{\txt}[1]{\textit{text}}
 \newcommand{\training}[1]{\textit{training}}
@@ -69,7 +67,10 @@
 \newcommand{\decoder}[1]{\textit{decoder}}
 \newcommand{\fcv}[1]{\textit{5-fold cross validation}}
 \newcommand{\ltr}[1]{\textit{learning to rank}}
+\newcommand{\paralegal}[1]{\textit{paralegal}}
+\newcommand{\dataset}[1]{\textit{dataset}}
 
+%% With Capitalization Stuff
 \newcommand{\Base}[1]{\textit{Base}}
 \newcommand{\Txt}[1]{\textit{Text}}
 \newcommand{\Matching}[1]{\textit{Matching}}
@@ -77,60 +78,26 @@
 \newcommand{\Similarity}[1]{\textit{Similarity}}
 \newcommand{\Pipeline}[1]{\textit{Pipeline}}
 \newcommand{\Retriever}[1]{\textit{Retriever}}
-\newcommand{\CutOff}[1]{\textit{Cut-Off}}
+\newcommand{\Cutoff}[1]{\textit{Cut-off}}
+\newcommand{\Dataset}[1]{\textit{Dataset}}
 
-% \newcommand{\Sys}[1]{\textit{System}}
-% \newcommand{\Training}[1]{\textit{Training}}
-% \newcommand{\Testing}[1]{\textit{Testing}}
-% \newcommand{\Alg}[1]{\textit{Algorithm}}
-% \newcommand{\Feature}[1]{\textit{Feature}}
-% \newcommand{\Extraction}[1]{\textit{Extraction}}
-% \newcommand{\Score}[1]{\textit{Score}}
-% \newcommand{\Contextual}[1]{\textit{Contextual}}
-% \newcommand{\Word}[1]{\textit{Word}}
-% \newcommand{\Embedding}[1]{\textit{Embedding}}
-% \newcommand{\Corpus}[1]{\textit{Corpus}}
-% \newcommand{\Heuristic}[1]{\textit{Heuristic}}
-% \newcommand{\Pipeline}[1]{\textit{Pipeline}}
-% \newcommand{\Reranking}[1]{\textit{Reranking}}
-% \newcommand{\Ml}[1]{\textit{Machine learning}}
-% \newcommand{\ML}[1]{\textit{Machine Learning}}
-% \newcommand{\Ltr}[1]{\textit{Learning to rank}}
-% \newcommand{\LTR}[1]{\textit{Learning to Rank}}
-% \newcommand{\Cutoff}[1]{\textit{Cut-off}}
-% \newcommand{\Learning}[1]{\textit{Learning}}
-% \newcommand{\Ablation}[1]{\textit{Ablation}}
-% \newcommand{\Recall}[1]{\textit{Recall}}
-% \newcommand{\Incremental}[1]{\textit{Incremental}}
-% \newcommand{\Importance}[1]{\textit{Importance}}
-% \newcommand{\Parsing}[1]{\textit{Parsing}}
-
-% Not Italic Stuff
 %% Singkatan Stuff
 \newcommand{\ranknet}[1]{RankNet}
 \newcommand{\lambdarank}[1]{LambdaRank}
 \newcommand{\lambdamart}[1]{LambdaMART}
-
 \newcommand{\obm}[1]{BM25}
 \newcommand{\dfr}[1]{DFR}
 \newcommand{\tfidf}[1]{TF-IDF}
 \newcommand{\inl}[1]{InL2}
 \newcommand{\dlh}[1]{DLH13}
-
 \newcommand{\tfive}[1]{T5}
 \newcommand{\ttttt}[1]{Text-to-Text Transfer Transformer}
-
-
 \newcommand{\bert}[1]{BERT}
 \newcommand{\lbert}[1]{Bidirectional Encoder Representations from Transformers}
-
 \newcommand{\COLIEE}[1]{COLIEE}
 \newcommand{\coliee}[1]{Competition on Legal Information, Extraction/Entailment}
-
 \newcommand{\llm}[1]{\textit{Large Language Model}}
 \newcommand{\LLM}[1]{\textit{LLM}}
-
 \newcommand{\ndcg}[1]{Normalized Discounted Cumulative Gain}
 \newcommand{\NDCG}[1]{NDCG}
-
 \newcommand{\transformer}[1]{transformer}
