--- a/config/settings.tex
+++ b/config/settings.tex
@@ -77,8 +77,8 @@
 
 %
 % Tuliskan penguji
-\def\pengujiSatu{Penguji Pertama Anda}
-\def\pengujiDua{Penguji Kedua Anda}
+\def\pengujiSatu{Syifa Nurhayati, M.Kom.}
+\def\pengujiDua{Amril Syalim, S.Kom., M.Eng., Ph.D.}
 % Kosongkan jika tidak ada penguji ketiga (umumnya penguji ketiga hanya ada untuk S2)
 \def\pengujiTiga{}
 % Kosongkan jika tidak ada penguji keempat, kelima, atau keenam (umumnya penguji > 3 hanya ada untuk S3)
@@ -102,11 +102,11 @@
 %
 % Tuliskan tanggal pengesahan laporan, waktu dimana laporan diserahkan ke
 % penguji/sekretariat
-\def\tanggalSiapSidang{Tanggal Bulan Tahun}
+\def\tanggalSiapSidang{10 Juni 2024}
 %
 % Tuliskan tanggal keputusan sidang dikeluarkan dan penulis dinyatakan
 % lulus/tidak lulus
-\def\tanggalLulus{Tanggal Bulan Tahun}
+\def\tanggalLulus{27 Juni 2024}
 
 
 %-----------------------------------------------------------------------------%
